--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,36 @@
 {
-	"name": "silverstripe/subsites",
-	"description": "Run multiple sites from a single SilverStripe install.",
-	"type": "silverstripe-module",
-	"keywords": ["silverstripe", "subsites", "multisite"],
-	"authors": [
-		{
-			"name": "Sam Minnee",
-			"email": "sam@silverstripe.com"
-		}
-	],
-	"require":
-	{
-		"silverstripe/framework": "~4.0",
-		"silverstripe/cms": "~4.0",
-        "silverstripe/asset-admin": "~1.0.0"
-	},
-	"require-dev": {
+    "name": "mikenz/silverstripe-simplesubsites",
+    "description": "Run multiple sites from a single SilverStripe install.",
+    "type": "silverstripe-module",
+    "keywords": [
+        "silverstripe",
+        "subsites",
+        "multisite",
+        "multisites"
+    ],
+    "authors": [
+        {
+            "name": "Sam Minnee",
+            "email": "sam@silverstripe.com"
+        },{
+            "name": "Mike Cochrane",
+            "email": "mikec@mikenz.geek.nz"
+        }
+    ],
+    "require":
+    {
+        "silverstripe/framework": "dev-master",
+        "silverstripe/cms": "dev-master",
+        "silverstripe/asset-admin": "dev-master"
+    },
+    "require-dev": {
 		"phpunit/PHPUnit": "~4.8@stable"
-	},
-	"extra": {
-		"branch-alias": {
-			"dev-master": "2.0.x-dev"
-		}
-	},
-	"license": "BSD-3-Clause"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0.x-dev"
+        },
+        "installer-name": "simplesubsites"
+    },
+    "license": "BSD-3-Clause"
 }
